--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Internet Personal Assistant (IPA)</h1>
-<p>IPA is a bowser based personal assitant experiment using voice interaction and Natural Languange Processing (NLP).</p>
+<p>IPA is a bowser based personal assistant experiment using voice interaction and Natural Language Processing (NLP).</p>
 <h2>Commands</h2>
 <h4>Time difference</h4>
 <p>
